--- a/repositoryUserInterface/app/views/Application/presenceactuate.html
+++ b/repositoryUserInterface/app/views/Application/presenceactuate.html
@@ -785,6 +785,9 @@
 						});						
 					} 
 				}
+				else if(receivedDeviceData[RESPONSE_STATUS_CODE] == NO_DEVICE_FOUND) {
+					alertGetActuateError("No devices added yet");
+				}
 
 				$("#dialog:ui-dialog").dialog("destroy");
 				var dlg = $("#dialog").dialog({
