--- a/repositoryUserInterface/app/views/Application/registervpds.html
+++ b/repositoryUserInterface/app/views/Application/registervpds.html
@@ -291,7 +291,7 @@
 						<br/>
 						<label>Enter VPDS Key:<sup>*</sup></label>
 						<div><font size="1">Please select a secret key for your VPDS</font></div>
-						<input type="password" id="vpdsKey"/>
+						<input type="text" id="vpdsKey"/>
 						<div class="rightDiv">
 							<span class="errorVisual" id="spanVPDSKey"></span>
 						</div>
