Updated auto login process after registration

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -192,7 +192,7 @@
 
 							} else {
 								removeError();
-								window.location = window.location.href+"home";
+								window.location = URL_UI_SERVER + "home";
 
 							}
 
@@ -296,7 +296,7 @@
 							<label name="sign_up_submit" id ="sign_up_submit" class="buttons"> Sign Up </label>
 						</p>
 					</nav>
-				</aside>
+				</aside><br/>
 				<article>
 				<footer>
 				<p>Smart Rooms</p>
@@ -312,7 +312,7 @@
 				<footer class="wrapper">
 					<h4 align="center"><img src="@{'/public/images/logo.png'}" width="100px" height="70px" />&nbsp
 				<img src="@{'/public/images/uclaa.png'}" width="160px" height="40px" />
-				<font size="+1">Special Thanks to DeIT and NSF for funding</font></h4>
+				<font size="+1">Special Thanks to DeITy and NSF for funding</font></h4>
 				</footer>
 				</div>
 
