--- a/repositoryUserInterface/app/views/Application/guardrule.html
+++ b/repositoryUserInterface/app/views/Application/guardrule.html
@@ -213,7 +213,7 @@
 											<div class='divRight'><input value=" + targetop + " readonly=readonly></input></div> \
 											</div> \
 											<div class='divRuleB1'><div class='divLeft'><label>Priority</label></div><div class='divRight'><input value=" + priority + " readonly=readonly></input></div></div> \
-											<div class='divRuleB2'><div class='divLeft'><label id='condition'>Applied to </label></div><div class='divRight'><textarea rows='3' cols='20' readonly='readonly'>" + condition + "</textarea></div></div> \
+											<div class='divRuleB2'><div class='divLeft'><label id='condition'>Condition </label></div><div class='divRight'><textarea rows='3' cols='20' readonly='readonly'>" + condition + "</textarea></div></div> \
 											<div class='divRuleB2'><div class='divLeft'><label>Action</label></div><div class='divRight'><input value=" + action + " readonly=readonly></input></div></div><br/><br/>");	
 
 
@@ -356,10 +356,10 @@
 			<hr>
 			<div id="accordion"></div>			
 			<hr>
-			<!--<div id="errorDiv" class="errorDiv"></div>
+			<div id="errorDiv" class="errorDiv"></div>
 			<button id="addGuardRule" class="google-button-blue">
 				Create New Guard Rule
-			</button>-->			
+			</button>
 			<input type="hidden"  id ="username" value =${username}></input>
 		</div>
 		<br/>
