--- a/repositoryUserInterface/app/views/Application/share.html
+++ b/repositoryUserInterface/app/views/Application/share.html
@@ -127,7 +127,7 @@
 						IDspanDeviceName = "#spanDeviceName1";
 
 						$("#trControl").css("background-color","white");
-						$("#trData").css("background-color","CC9933");
+						$("#trData").css("background-color","#F1EDC2");
 
 						$("#deviceName1").prop('disabled', false);
 						$("#deviceName2").prop('disabled', true);
@@ -151,7 +151,7 @@
 						IDspanDeviceName = "#spanDeviceName2";
 
 						$("#trData").css("background-color","white");
-						$("#trControl").css("background-color","CC9933");
+						$("#trControl").css("background-color","#F1EDC2");
 
 						$("#deviceName2").prop('disabled', false);
 						$("#deviceName1").prop('disabled', true);						
