Modified UI for sharing access

--- a/repositoryUserInterface/app/views/Application/share.html
+++ b/repositoryUserInterface/app/views/Application/share.html
@@ -549,8 +549,9 @@
 				var dlg1 = $("#dialogList").dialog({
 					autoOpen : false,
 					draggable : true,
-					resizable : true,
+					resizable : false,
 					width : 1050,
+					height : 500,
 					modal : true
 				});
 
